fixed scrolling and line break on detail page

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -129,12 +129,12 @@ body {
 }
 
 #detailWrap {
-  width: 75vw;
+  width: 80vw;
   display: flex;
   flex-direction: row;
   margin-top: 100px;
   @media only screen and (max-width: 414px) {
-    justify-content: center;
+    // justify-content: center;
     margin-top: 20px;
   }
   #detailCard {
@@ -148,9 +148,16 @@ body {
       width: 100%;
       height: 400px;
       object-fit: cover;
+      margin-bottom: 10px;
       @media only screen and (max-width: 414px) {
         height: 200px;
       }
+    }
+    #detailLink {
+      font-size: 10px;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
   }
   #listingWrap {
